--- a/css/large.css
+++ b/css/large.css
@@ -1,6 +1,24 @@
 @media only screen and (min-width: 60em) {
 
-    main {
+    main,
+    footer {
         max-width: 100%;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 35px;
+    }
+
+    h3,
+    p {
+        font-size: 25px;
+    }
+
+    .nagivation a {
+        font-size: 20px;
     }
 }
