--- a/css/medium.css
+++ b/css/medium.css
@@ -77,5 +77,12 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 
+    .text {
+        margin-top: -48px;
+    }
+
+    #contacto {
+        margin-top: -30px;
+    }
 
 }
