--- a/css/large.css
+++ b/css/large.css
@@ -21,4 +21,17 @@
     .nagivation a {
         font-size: 20px;
     }
+
+    .juegos {
+        text-align: center;
+        
+    }
+
+    .text {
+        margin-top: -48px;
+    }
+
+    #rompecabezas {
+        text-align: left;
+    }
 }
